SVN Update# 2612 by Vity: securing against possible bug